[gd_scene load_steps=3 format=3 uid="uid://bdnok5tk1xkmk"]

[ext_resource type="FontFile" uid="uid://bddtsccx0qour" path="res://assets/UI/Fonts/dogicapixel.otf" id="1_7ftg0"]
[ext_resource type="Script" path="res://dev/DevConsole.gd" id="1_fdo5p"]

[node name="DevConsole" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 223.0
offset_right = 96.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
script = ExtResource("1_fdo5p")

[node name="BG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Panel" type="HBoxContainer" parent="BG/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="LV" type="VBoxContainer" parent="BG/MarginContainer/Panel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 3

[node name="LevelBtn" type="Button" parent="BG/MarginContainer/Panel/LV"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7ftg0")
theme_override_font_sizes/font_size = 8
text = "add level"

[node name="AddHPBtn" type="Button" parent="BG/MarginContainer/Panel/LV"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7ftg0")
theme_override_font_sizes/font_size = 8
text = "add Health"

[node name="AddXP" type="Button" parent="BG/MarginContainer/Panel/LV"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7ftg0")
theme_override_font_sizes/font_size = 8
text = "add exp"

[node name="AddHPotBtn" type="Button" parent="BG/MarginContainer/Panel/LV"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7ftg0")
theme_override_font_sizes/font_size = 8
text = "add h pot"

[node name="AddEPotBtn" type="Button" parent="BG/MarginContainer/Panel/LV"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7ftg0")
theme_override_font_sizes/font_size = 8
text = "add e pot"

[node name="SpawnBtn" type="Button" parent="BG/MarginContainer/Panel/LV"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7ftg0")
theme_override_font_sizes/font_size = 8
text = "spawn"

[node name="RV" type="VBoxContainer" parent="BG/MarginContainer/Panel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 3

[node name="lvlin" type="LineEdit" parent="BG/MarginContainer/Panel/RV"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7ftg0")
theme_override_font_sizes/font_size = 8
text = "1"
alignment = 1
max_length = 2

[node name="hpin" type="LineEdit" parent="BG/MarginContainer/Panel/RV"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7ftg0")
theme_override_font_sizes/font_size = 8
text = "1"
alignment = 1
max_length = 2

[node name="expin" type="LineEdit" parent="BG/MarginContainer/Panel/RV"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7ftg0")
theme_override_font_sizes/font_size = 8
text = "1"
alignment = 1
max_length = 2

[node name="hin" type="LineEdit" parent="BG/MarginContainer/Panel/RV"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7ftg0")
theme_override_font_sizes/font_size = 8
text = "1"
alignment = 1
max_length = 2

[node name="ein" type="LineEdit" parent="BG/MarginContainer/Panel/RV"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7ftg0")
theme_override_font_sizes/font_size = 8
text = "1"
alignment = 1
max_length = 2

[node name="dmgin" type="LineEdit" parent="BG/MarginContainer/Panel/RV"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7ftg0")
theme_override_font_sizes/font_size = 8
text = "1"
alignment = 1
max_length = 2

[node name="PassView" type="VBoxContainer" parent="BG/MarginContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 11
alignment = 1

[node name="Label2" type="Label" parent="BG/MarginContainer/PassView"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.607843, 0, 1)
theme_override_colors/font_shadow_color = Color(0.941176, 0.905882, 0.435294, 0.207843)
theme_override_fonts/font = ExtResource("1_7ftg0")
theme_override_font_sizes/font_size = 8
text = "Dev Console"
horizontal_alignment = 1
uppercase = true

[node name="Label" type="Label" parent="BG/MarginContainer/PassView"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.164706, 0.992157, 1, 1)
theme_override_fonts/font = ExtResource("1_7ftg0")
theme_override_font_sizes/font_size = 8
text = "Enter the password"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="PassIn" type="LineEdit" parent="BG/MarginContainer/PassView"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_7ftg0")
theme_override_font_sizes/font_size = 8
placeholder_text = "enter key..."
alignment = 1
max_length = 6
secret = true

[node name="HBoxContainer" type="HBoxContainer" parent="BG/MarginContainer/PassView"]
layout_mode = 2
alignment = 1

[node name="PassBtn" type="Button" parent="BG/MarginContainer/PassView/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7ftg0")
theme_override_font_sizes/font_size = 8
text = "Okay"

[node name="PassBackBtn" type="Button" parent="BG/MarginContainer/PassView/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_7ftg0")
theme_override_font_sizes/font_size = 8
text = "Close"

[connection signal="button_up" from="BG/MarginContainer/Panel/LV/LevelBtn" to="." method="_on_level_btn_button_up"]
[connection signal="button_up" from="BG/MarginContainer/Panel/LV/AddHPBtn" to="." method="_on_add_hp_btn_button_up"]
[connection signal="button_up" from="BG/MarginContainer/Panel/LV/AddXP" to="." method="_on_add_xp_button_up"]
[connection signal="button_up" from="BG/MarginContainer/Panel/LV/AddHPotBtn" to="." method="_on_add_h_pot_btn_button_up"]
[connection signal="button_up" from="BG/MarginContainer/Panel/LV/AddEPotBtn" to="." method="_on_add_e_pot_btn_button_up"]
[connection signal="button_up" from="BG/MarginContainer/Panel/LV/SpawnBtn" to="." method="_on_spawn_btn_button_up"]
[connection signal="button_up" from="BG/MarginContainer/PassView/HBoxContainer/PassBtn" to="." method="_on_pass_btn_button_up"]
[connection signal="button_up" from="BG/MarginContainer/PassView/HBoxContainer/PassBackBtn" to="." method="_on_pass_back_btn_button_up"]
